--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -7,9 +7,10 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-OKIVNDG;Initial Catalog=IdentityApp;User ID=onur;Password=12345onur;Encrypt=False;MultipleActiveResultSets=True;TrustServerCertificate=False;"
+    "SqlServer": "Data Source=DESKTOP-OKIVNDG;Initial Catalog=IdentityApp;User ID=onur;Password=12345onur;Encrypt=False;MultipleActiveResultSets=True;TrustServerCertificate=False;",
+    "Npgsql": "Server=127.0.0.1;Port=5432;Database=IdentityApp;User Id=postgres;Password=!Cmos1234;Include Error Detail=True;"
   },
-
+  "DbProvider": "Npgsql",
   "JWT": {
     "Key": "G6ZjGyuKnKabrdrPf27oj7RQHWl2kxl6",
     "ExpiresInDays": 15,
