--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -4,10 +4,12 @@
 		<TargetFramework>net7.0</TargetFramework>
 		<Nullable>disable</Nullable>
 		<ImplicitUsings>disable</ImplicitUsings>
+		<UserSecretsId>a0700bcf-cd7b-4886-bfe5-14d3b08a5c52</UserSecretsId>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<!--to authenticate user using JWT Bearer-->
+		<PackageReference Include="Mailjet.Api" Version="3.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.5" />
 		<!--to be able to derive from IdentityDbContext inside our context.cs-->
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.5" />
