--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -10,10 +10,11 @@
     "SqlServer": "Data Source=DESKTOP-OKIVNDG;Initial Catalog=IdentityApp;User ID=onur;Password=12345onur;Encrypt=False;MultipleActiveResultSets=True;TrustServerCertificate=False;",
     "Npgsql": "Server=127.0.0.1;Port=5432;Database=IdentityApp;User Id=postgres;Password=!Cmos1234;Include Error Detail=True;"
   },
-  "DbProvider": "SqlServer",
+  "DbProvider": "Npgsql",
   "JWT": {
     "Key": "G6ZjGyuKnKabrdrPf27oj7RQHWl2kxl6",
-    "ExpiresInDays": 15,
+    "ExpiresInMinutes": 1,
+    "RefreshTokenExpiresInDays": 5,
     "Issuer": "http://localhost:5296",
     "ClientUrl": "http://localhost:4200"
   },
