--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -5,5 +5,28 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+
+  "ConnectionStrings": {
+    "SqlServer": "Data Source=DESKTOP-OKIVNDG;Initial Catalog=IdentityApp;User ID=onur;Password=12345onur;Encrypt=False;MultipleActiveResultSets=True;TrustServerCertificate=False;",
+    "Npgsql": "Server=127.0.0.1;Port=5432;Database=IdentityApp;User Id=postgres;Password=!Cmos1234;Include Error Detail=True;"
+  },
+  "DbProvider": "Npgsql",
+  "JWT": {
+    "Key": "G6ZjGyuKnKabrdrPf27oj7RQHWl2kxl6",
+    "ExpiresInMinutes": 30,
+    "RefreshTokenExpiresInDays": 1,
+    "Issuer": "http://localhost:5296",
+    "ClientUrl": "http://localhost:4200"
+  },
+
+  "Email": {
+    "From": "yurdagelenonur7@gmail.com",
+    "ApplicationName": "IdentityApp",
+    "ConfirmEmailPath": "account/confirm-email",
+    "ResetPasswordPath": "account/reset-password"
+  },
+  "MailJet": {
+    "ApiKey": "49023904ef86906efaa1324198d51723", //Mail Jet Account > Account Settings > API Key Management 
+    "SecretKey": "15e2a07822435f55032e41a96ce8e9cb"
+  }
 }
